Início de projeto - Site empresa algoritmo

--- a/src/components/title/titles.css
+++ b/src/components/title/titles.css
@@ -1,3 +1,10 @@
-h1 {
-    
+div {
+    height: fit-content;
+}
+
+div .subtitle {
+    display: flex;
+    margin-top: -3rem;
+    margin-bottom: 2rem;
+    font-size: 30px;
 }
